--- a/style.css
+++ b/style.css
@@ -6,11 +6,50 @@
 html{
     font-size: 10px;
 }
+body{
+    background-image: url(./images2/APC13.jpg);
+    background-size: cover;
+
+}
 main{
+    color: #fff;
     padding: 1rem 0 0 1rem;
     font-size: 1.5rem;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
 }
 main h1{
     padding: 0 0 1rem 0;
     font-size: 3rem;
+}
+input{
+    display: block;
+    margin-left: 2rem;
+    position: relative;
+    left: 10rem;
+    outline: 0;
+    border: none;
+    border-radius: 1rem;
+    padding: 1rem;
+    margin: 1.5rem 0;
+}
+select{
+    padding: .5rem;
+    margin-bottom: 7rem;
+    border: none;
+    outline: none;
+}
+.calculate{
+    border-radius: 1rem;
+    background-color: white;
+    border: none;
+    padding: 1rem;
+    margin-top: 1rem;
+}
+.calculate:hover{
+    background-color: #000;
+    color: #fff;
 }
